--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "cra-template": "1.2.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "cra-template": "1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "soundfont-player": "^0.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
